--- a/OutreachBotDashboard/src/main/resources/com/gos/outreach/shuffleboard/super_structure/super_structure.fxml
+++ b/OutreachBotDashboard/src/main/resources/com/gos/outreach/shuffleboard/super_structure/super_structure.fxml
@@ -10,7 +10,10 @@
     <Group fx:id="m_group">
     <!-- Put your shapes in here. -->
     <!-- Examples. -->
-    <!--     <Circle fx:id="m_spinningWheel" fill="plum"/> -->
-    <!--     <Rectangle fx:id="m_punch" fill="peachPuff"/> -->
+         <Circle fx:id="m_shooterWheel" fill="plum"/>
+         <Rectangle fx:id="m_chassis" fill="peachPuff"/>
+         <Rectangle fx:id="m_collector" fill="cadetblue"/>
+         <Rectangle fx:id="m_shooterBase" fill="darkcyan"/>
+         <Arc fx:id="m_hood" fill="TRANSPARENT" stroke="coral" type="ROUND" />
     </Group>
 </Pane>
