--- a/codelabs/custom_shuffleboard/src/main/resources/com/gos/codelabs/shuffleboard/sd_widgets/ss/codelab_super_structure_widget.fxml
+++ b/codelabs/custom_shuffleboard/src/main/resources/com/gos/codelabs/shuffleboard/sd_widgets/ss/codelab_super_structure_widget.fxml
@@ -2,10 +2,11 @@
 
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane fx:id="m_root" prefHeight="700" prefWidth="600"
-            xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.gos.codelabs.shuffleboard.sd_widgets.ss.CodelabSuperStructureWidget">
+    xmlns="http://javafx.com/javafx/8.0.141"
+    xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="com.gos.codelabs.shuffleboard.sd_widgets.ss.CodelabSuperStructureWidget">
     <center>
         <fx:include fx:id="m_widget"
-                    source="/com/gos/codelabs/shuffleboard/sd_widgets/ss/codelab_super_structure.fxml"/>
+            source="/com/gos/codelabs/shuffleboard/sd_widgets/ss/codelab_super_structure.fxml" />
     </center>
 </BorderPane>
