--- a/y2020/2020InfiniteRechargeDashboard/src/main/resources/com/gos/infinite_recharge/sd_widgets/leds/led.fxml
+++ b/y2020/2020InfiniteRechargeDashboard/src/main/resources/com/gos/infinite_recharge/sd_widgets/leds/led.fxml
@@ -2,8 +2,9 @@
 
 <?import javafx.scene.Group?>
 <?import javafx.scene.layout.Pane?>
-<Pane fx:id="mPane" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.gos.infinite_recharge.sd_widgets.leds.LedController">
+<Pane fx:id="mPane" xmlns="http://javafx.com/javafx/9"
+    xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="com.gos.infinite_recharge.sd_widgets.leds.LedController">
 
     <children>
         <Group fx:id="m_group">
