--- a/y2020/2020InfiniteRechargeDashboard/src/main/resources/com/gos/infinite_recharge/sd_widgets/leds/led_widget.fxml
+++ b/y2020/2020InfiniteRechargeDashboard/src/main/resources/com/gos/infinite_recharge/sd_widgets/leds/led_widget.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.StackPane?>
-<StackPane fx:id="m_root" minHeight="200" minWidth="200" prefHeight="200" prefWidth="200"
-           xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.gos.infinite_recharge.sd_widgets.leds.LedWidget">
-    <children>
-        <fx:include fx:id="m_leds"
-                    source="/com/gos/infinite_recharge/sd_widgets/leds/led.fxml"/>
-    </children>
-</StackPane>
+<?import javafx.scene.layout.BorderPane?>
+<BorderPane fx:id="m_root" prefHeight="700" prefWidth="600"
+    xmlns="http://javafx.com/javafx/8.0.141"
+    xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="com.gos.infinite_recharge.sd_widgets.leds.LedWidget">
+    <center>
+        <fx:include fx:id="m_widget"
+            source="/com/gos/infinite_recharge/sd_widgets/leds/led.fxml" />
+    </center>
+</BorderPane>
