--- a/y2021/OutreachBotDashboard/src/main/resources/com/gos/outreach/shuffleboard/super_structure/super_structure.fxml
+++ b/y2021/OutreachBotDashboard/src/main/resources/com/gos/outreach/shuffleboard/super_structure/super_structure.fxml
@@ -4,16 +4,17 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.*?>
 
-<Pane fx:id="m_pane" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.gos.outreach.shuffleboard.super_structure.SuperStructureController">
+<Pane fx:id="m_pane" xmlns="http://javafx.com/javafx/9"
+    xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="com.gos.outreach.shuffleboard.super_structure.SuperStructureController">
 
     <Group fx:id="m_group">
-    <!-- Put your shapes in here. -->
-    <!-- Examples. -->
-         <Circle fx:id="m_shooterWheel" fill="plum"/>
-         <Rectangle fx:id="m_chassis" fill="peachPuff"/>
-         <Rectangle fx:id="m_collector" fill="cadetblue"/>
-         <Rectangle fx:id="m_shooterBase" fill="darkcyan"/>
-         <Arc fx:id="m_hood" fill="TRANSPARENT" stroke="coral" type="ROUND" />
+        <!-- Put your shapes in here. -->
+        <!-- Examples. -->
+        <Circle fx:id="m_shooterWheel" fill="plum" />
+        <Rectangle fx:id="m_chassis" fill="peachPuff" />
+        <Rectangle fx:id="m_collector" fill="cadetblue" />
+        <Rectangle fx:id="m_shooterBase" fill="darkcyan" />
+        <Arc fx:id="m_hood" fill="TRANSPARENT" stroke="coral" type="ROUND" />
     </Group>
 </Pane>
