created and set shapes/constants for all robot parts in super structure colored shapes/robot components in super structure - when motors move, colors change

--- a/y2022/RapidReactDashboard/src/main/resources/com/gos/rapidreact/shuffleboard/super_structure/super_structure.fxml
+++ b/y2022/RapidReactDashboard/src/main/resources/com/gos/rapidreact/shuffleboard/super_structure/super_structure.fxml
@@ -8,9 +8,16 @@
             fx:controller="com.gos.rapidreact.shuffleboard.super_structure.SuperStructureController">
 
     <Group fx:id="m_group">
-    <!-- Put your shapes in here. -->
-    <!-- Examples. -->
-    <!--     <Circle fx:id="m_spinningWheel" fill="plum"/> -->
-    <!--     <Rectangle fx:id="m_punch" fill="peachPuff"/> -->
+        <!-- Put your shapes in here. -->
+        <!-- Examples. -->
+        <Rectangle fx:id="m_chassis" fill="#96e3d9"/>
+        <Rectangle fx:id="m_intake" fill="#b4b0dd"/>
+        <Rectangle fx:id="m_intakeWheel" fill="#e8b1f5"/>
+        <Rectangle fx:id="m_horizontalConveyor" fill="#c4f087"/>
+        <Rectangle fx:id="m_verticalConveyor" fill="#f6c789"/>
+        <Rectangle fx:id="m_hanger" fill="#efea98"/>
+        <Rectangle fx:id="m_shooter" fill="#fdc9c1"/>
+
+
     </Group>
 </Pane>
