--- a/y2022/RapidReactDashboard/src/main/resources/com/gos/rapidreact/shuffleboard/super_structure/super_structure_widget.fxml
+++ b/y2022/RapidReactDashboard/src/main/resources/com/gos/rapidreact/shuffleboard/super_structure/super_structure_widget.fxml
@@ -2,10 +2,11 @@
 
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane fx:id="m_root" prefHeight="350" prefWidth="250"
-            xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.gos.rapidreact.shuffleboard.super_structure.SuperStructureWidget">
+    xmlns="http://javafx.com/javafx/8.0.141"
+    xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="com.gos.rapidreact.shuffleboard.super_structure.SuperStructureWidget">
     <center>
         <fx:include fx:id="m_widget"
-                    source="/com/gos/rapidreact/shuffleboard/super_structure/super_structure.fxml"/>
+            source="/com/gos/rapidreact/shuffleboard/super_structure/super_structure.fxml" />
     </center>
 </BorderPane>
