--- a/y2023/ChargedUpDashboard/src/main/resources/com/gos/chargedup/shuffleboard/super_structure/super_structure.fxml
+++ b/y2023/ChargedUpDashboard/src/main/resources/com/gos/chargedup/shuffleboard/super_structure/super_structure.fxml
@@ -9,17 +9,18 @@
     fx:controller="com.gos.chargedup.shuffleboard.super_structure.SuperStructureController">
 
     <Group fx:id="m_group">
-        <Rectangle fx:id="m_chassis" fill="papayawhip" />
-        <Rectangle fx:id="m_turret" fill="papayawhip" />
-        <Rectangle fx:id="m_armBase" fill="papayawhip" />
-        <Rectangle fx:id="m_arm1" fill="papayawhip" />
-        <Rectangle fx:id="m_arm2" fill="papayawhip" />
-        <Circle fx:id="m_armJoint" fill="papayawhip" />
-        <Rectangle fx:id="m_claw" fill="papayawhip" />
-        <Rectangle fx:id="m_basket" fill="papayawhip" />
-        <Rectangle fx:id="m_hopper" fill="papayawhip" />
-        <Rectangle fx:id="m_intake" fill="papayawhip" />
-        <Circle fx:id="m_intakeRoller1" fill="papayawhip" />
-        <Circle fx:id="m_intakeRoller2" fill="papayawhip" />
+        <Rectangle fx:id="m_chassis" fill="maroon" />
+        <Rectangle fx:id="m_turret" fill="maroon" />
+        <Rectangle fx:id="m_armBase" fill="maroon" />
+        <Rectangle fx:id="m_arm1" fill="maroon" />
+        <Rectangle fx:id="m_arm2" fill="maroon" />
+        <Rectangle fx:id="m_arm3" fill="maroon" />
+        <Circle fx:id="m_armJoint" fill="maroon" />
+        <Rectangle fx:id="m_claw" fill="maroon" />
+        <Rectangle fx:id="m_basket" fill="maroon" />
+        <Rectangle fx:id="m_hopper" fill="maroon" />
+        <Rectangle fx:id="m_intake" fill="maroon" />
+        <Circle fx:id="m_intakeRoller1" fill="maroon" />
+        <Circle fx:id="m_intakeRoller2" fill="maroon" />
     </Group>
 </Pane>
