--- a/libraries/DashboardGenerator/lib/templates/webdash/project_files/src/utils/arc.ts.jinja2
+++ b/libraries/DashboardGenerator/lib/templates/webdash/project_files/src/utils/arc.ts.jinja2
@@ -4,37 +4,35 @@ import { Shape } from "./shape";
 
 
 function degreesToRadians(degrees: number) {
-    return degrees * Math.PI / 180.0
-  }
+  return degrees * Math.PI / 180.0;
+}
 
 export class Arc extends Shape {
-    centerX: number;
-    centerY: number;
-    radius: number;
-    startAngle: number;
-    endAngle: number;
-  
-    constructor(centerX: number, centerY: number, radius: number, startAngle: number, endAngle: number, fillColor?: string) {
-      super(fillColor);
-      this.centerX = centerX;
-      this.centerY = centerY;
-      this.radius = radius;
-      this.startAngle = degreesToRadians(startAngle);
-      this.endAngle = degreesToRadians(endAngle);
-      this.fillColor = fillColor;
-    }
-    
-    render(ctx: CanvasRenderingContext2D) {
-      ctx.save()
-          
-      ctx.fillStyle = "red";
-      ctx.strokeStyle = "green";
-      ctx.beginPath();
-      ctx.arc(this.centerX, this.centerY, this.radius, this.startAngle, this.endAngle);
-      // ctx.arc(100, 75, 50, 0, 2 * Math.PI);
-      // ctx.arc(4, 4, 50, 4, 2 * Math.PI);
-      ctx.stroke();
-  
-      ctx.restore()
-    }
+  centerX: number;
+  centerY: number;
+  radius: number;
+  startAngle: number;
+  endAngle: number;
+
+  constructor(centerX: number, centerY: number, radius: number, startAngle: number, endAngle: number, fillColor?: string) {
+    super(fillColor);
+    this.centerX = centerX;
+    this.centerY = centerY;
+    this.radius = radius;
+    this.startAngle = degreesToRadians(startAngle);
+    this.endAngle = degreesToRadians(endAngle);
+    this.fillColor = fillColor;
   }
+    
+  render(ctx: CanvasRenderingContext2D) {
+    ctx.save();
+
+    ctx.fillStyle = "red";
+    ctx.strokeStyle = "green";
+    ctx.beginPath();
+    ctx.arc(this.centerX, this.centerY, this.radius, this.startAngle, this.endAngle);
+    ctx.stroke();
+
+    ctx.restore();
+  }
+}
