--- a/libraries/DashboardGenerator/lib/templates/webdash/project_files/src/utils/shape.ts.jinja2
+++ b/libraries/DashboardGenerator/lib/templates/webdash/project_files/src/utils/shape.ts.jinja2
@@ -3,6 +3,7 @@
 export class Shape {
   defaultFillColor?: string;
   fillColor?: string;
+  defaultStrokeColor?: string;
   strokeColor?: string;
   strokeWidth?: number;
 
