--- a/libraries/DashboardGenerator/lib/ui/generate_config.ui
+++ b/libraries/DashboardGenerator/lib/ui/generate_config.ui
@@ -6,22 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>154</width>
-    <height>186</height>
+    <width>549</width>
+    <height>110</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
     <widget class="QCheckBox" name="force_utils">
      <property name="text">
       <string>Force Utils</string>
      </property>
     </widget>
    </item>
-   <item>
+   <item row="1" column="0">
     <widget class="QCheckBox" name="force_nt_names">
      <property name="styleSheet">
       <string notr="true">color: yellow;</string>
@@ -31,7 +31,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="1" column="1">
     <widget class="QCheckBox" name="force_tester">
      <property name="styleSheet">
       <string notr="true">color: yellow;</string>
@@ -41,7 +41,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="2" column="0">
     <widget class="QCheckBox" name="force_fxml">
      <property name="styleSheet">
       <string notr="true">color: red;</string>
@@ -51,7 +51,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="2" column="1">
     <widget class="QCheckBox" name="force_controller">
      <property name="styleSheet">
       <string notr="true">color: red;</string>
@@ -61,7 +61,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="3" column="0" colspan="2">
     <widget class="QPushButton" name="generate_btn">
      <property name="text">
       <string>Generate</string>
