--- a/libraries/DashboardGenerator/lib/ui/top_level_config.ui
+++ b/libraries/DashboardGenerator/lib/ui/top_level_config.ui
@@ -7,13 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>369</width>
-    <height>115</height>
+    <height>349</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
+   <item row="3" column="0" colspan="2">
+    <widget class="QPushButton" name="m_addWidgetButton">
+     <property name="text">
+      <string>Add Widget</string>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
@@ -34,6 +41,9 @@
    <item row="1" column="1">
     <widget class="QLineEdit" name="m_pluginSummary"/>
    </item>
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="m_pluginName"/>
+   </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
@@ -41,8 +51,12 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QLineEdit" name="m_pluginName"/>
+   <item row="4" column="0" colspan="2">
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>-1</number>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
