--- a/libraries/DashboardGenerator/lib/ui/widget_top_level_config.ui
+++ b/libraries/DashboardGenerator/lib/ui/widget_top_level_config.ui
@@ -15,7 +15,14 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="4" column="0" colspan="2">
-    <widget class="ChildTableConfig" name="child_table_config" native="true"/>
+    <widget class="QPushButton" name="add_child_table_btn">
+     <property name="text">
+      <string>Add Child Table</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLineEdit" name="table_name"/>
    </item>
    <item row="0" column="0">
     <widget class="QLabel" name="label">
@@ -24,8 +31,8 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="table_name"/>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="subpackage_name"/>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_2">
@@ -34,8 +41,8 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="subpackage_name"/>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="nt_constant"/>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label">
@@ -43,9 +50,6 @@
       <string>Widget Package</string>
      </property>
     </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="nt_constant"/>
    </item>
    <item row="2" column="1">
     <widget class="QLineEdit" name="widget_name"/>
@@ -64,24 +68,10 @@
     </widget>
    </item>
    <item row="5" column="0" colspan="2">
-    <widget class="TopLevelShapesConfigWidget" name="shapes_widget" native="true"/>
+    <widget class="QTabWidget" name="child_table_config_tabs"/>
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>ChildTableConfig</class>
-   <extends>QWidget</extends>
-   <header>libraries/DashboardGenerator/lib/ui/subpanels.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>TopLevelShapesConfigWidget</class>
-   <extends>QWidget</extends>
-   <header>libraries/DashboardGenerator/lib/ui/subpanels.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
